Scoring level added, dvs status action, some customer exception added, unused classes removed, ExternalIntegrationClient added